# spotify-video

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: broken-song.md
src/: EXAMPLE_CONFIG.py  FlaskSessionCacheHandler.py  app.py  index.html  index.md  pyproject.toml  script.js
src/static/: player.html  script.js  video_overrides.js
